@startuml

title __VIOLATIONS's Class Diagram__\n

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          abstract class edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter {
              {static} - serialVersionUID : long
              + parse()
              ~ convertSeverity()
              ~ convertToIssue()
              ~ convertToReport()
              ~ createIssueBuilder()
              {abstract} ~ createParser()
              ~ extractAdditionalProperties()
              ~ isValid()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.AndroidLintParserAdapter {
              {static} - serialVersionUID : long
              ~ createParser()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.CodeNarcAdapter {
              {static} - serialVersionUID : long
              ~ createParser()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.CppCheckAdapter {
              {static} - serialVersionUID : long
              ~ convertToReport()
              ~ createParser()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.DocFxAdapter {
              {static} - serialVersionUID : long
              ~ createParser()
              ~ isValid()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.Flake8Adapter {
              {static} - serialVersionUID : long
              ~ createParser()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.JUnitAdapter {
              {static} - serialVersionUID : long
              ~ createParser()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.JsHintAdapter {
              {static} - serialVersionUID : long
              ~ createParser()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.KlocWorkAdapter {
              {static} - serialVersionUID : long
              ~ createParser()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.MyPyAdapter {
              {static} - serialVersionUID : long
              ~ createParser()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.PitAdapter {
              {static} - DETECTED : String
              {static} - STATUS : String
              {static} - serialVersionUID : long
              ~ convertSeverity()
              ~ createParser()
              ~ extractAdditionalProperties()
              ~ isValid()
              - getSpecifics()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.PyDocStyleAdapter {
              {static} - serialVersionUID : long
              ~ createParser()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.ResharperInspectCodeAdapter {
              {static} - serialVersionUID : long
              ~ createParser()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.XmlLintAdapter {
              {static} - serialVersionUID : long
              ~ createParser()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.YamlLintAdapter {
              {static} - serialVersionUID : long
              ~ createParser()
          }
        }
      }
    }
  }
  

  namespace edu.hm.hafner {
    namespace analysis {
      namespace parser {
        namespace violations {
          class edu.hm.hafner.analysis.parser.violations.ZptLintAdapter {
              {static} - serialVersionUID : long
              ~ createParser()
          }
        }
      }
    }
  }
  

  edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter -up-|> edu.hm.hafner.analysis.IssueParser
  edu.hm.hafner.analysis.parser.violations.AndroidLintParserAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.CodeNarcAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.CppCheckAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.DocFxAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.Flake8Adapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.JUnitAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.JsHintAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.KlocWorkAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.MyPyAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.PitAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.PyDocStyleAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.ResharperInspectCodeAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.XmlLintAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.YamlLintAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter
  edu.hm.hafner.analysis.parser.violations.ZptLintAdapter -up-|> edu.hm.hafner.analysis.parser.violations.AbstractViolationAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
